<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/lblTempState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/setDayWeekSetting"
        android:textColor="@color/white"
        android:textSize="9pt" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10pt"
        android:onClick="addSetting"
        android:text="@string/add_new" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10pt"
        android:onClick="copySettings"
        android:text="@string/CopyButtonWeekSetting" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lblModeText"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1" >

    </ListView>

    <TextView
        android:id="@+id/lblModeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:text="@string/listView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray" android:layout_marginBottom="5pt"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTempState"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3pt"
        android:text="@string/change_day"
        android:textSize="7pt" />

    <ImageButton
        android:id="@+id/imgPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/list"
        android:layout_alignRight="@+id/lblModeText"
        android:background="@drawable/round"
        android:src="@drawable/rarrow" android:layout_marginRight="-5pt" android:onClick="rightDay"/>

    <ImageButton
        android:id="@+id/imgPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/list"
        android:layout_alignLeft="@+id/lblModeText"
        android:background="@drawable/round"
        android:src="@drawable/larrow" android:layout_marginLeft="-5pt" android:onClick="leftDay"/>
    
</RelativeLayout>